<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark"
    tools:context=".loginActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/chewy"
        android:text="@string/welcome_back"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/passtxt"
        app:layout_constraintEnd_toStartOf="@+id/popupbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginbtn2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="244dp"
        android:background="@drawable/button"
        android:fontFamily="@font/chewy"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/Dark"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtxt" />

    <EditText
        android:id="@+id/passtxt"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="108dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/enter_code"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="244dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="resetPass"
        android:text="@string/need_help"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toEndOf="@+id/loginbtn2"
        app:layout_constraintTop_toBottomOf="@+id/passtxt" />

    <TextView
        android:id="@+id/popupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="351dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showpopup"
        android:text="@string/threedot"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/passtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:showAsAction="never" />


</androidx.constraintlayout.widget.ConstraintLayout>