<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Dark"
    android:layout_height="match_parent"
    tools:context=".dataActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/chewy"
        android:text="@string/hii"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/deleteallbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="300dp"
        android:fontFamily="@font/chewy"
        android:text="@string/addnewdata"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#BFE024"
        android:textSize="25sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/pfnametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/pfnametxt"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="142dp"
        android:autofillHints=""
        android:ems="10"

        android:fontFamily="@font/chewy"
        android:hint="@string/platformname"
        android:inputType="textPersonName"
        android:textColor="@color/main"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/emailtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtxt" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="142dp"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/main"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/passtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfnametxt" />

    <EditText
        android:id="@+id/passtxt"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="142dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textColor="@color/main"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/addbtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt" />

    <Button
        android:id="@+id/addbtn1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/ic_subtraction_1"
        android:fontFamily="@font/chewy"
        android:onClick="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addbtn2"
        app:layout_constraintTop_toBottomOf="@+id/passtxt" />

    <Button
        android:id="@+id/addbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="59dp"
        android:background="#595454"
        android:fontFamily="@font/chewy"
        android:onClick="addRecord"
        android:text="@string/add1"
        android:textColor="@color/my"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtxt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="780dp"
        android:background="@color/Dark"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupbtn" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:onClick="visible2"
        android:text="@string/backArrow"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addbtn1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/popupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="18dp"

        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showpopup"
        android:text="@string/threedot"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />


</androidx.constraintlayout.widget.ConstraintLayout>