<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark"
    tools:context=".registerActivity">


    <Button
        android:id="@+id/backbtn2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="319dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:background="@color/Dark"
        android:gravity="center_vertical"
        android:onClick="back"
        android:text="back"

        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="140dp"
        android:background="@color/Dark"
        android:fontFamily="@font/chewy"
        android:onClick="addRecord"
        android:text="@string/register2"
        android:textAllCaps="false"
        android:textColor="@color/main"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtxt2" />

    <EditText
        android:id="@+id/passtxt2"
        style="@style/AppTheme"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/reentercode"
        android:inputType="numberPassword"

        android:textAlignment="center"
        android:textColor="@color/main"
        android:textColorHint="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/registerbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtxt" />

    <EditText
        android:id="@+id/nametxt"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""

        android:background="@drawable/text"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/entername"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textColorHint="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/emailtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/text"
        android:ems="2"
        android:fontFamily="@font/chewy"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"

        android:textAlignment="center"
        android:textColor="@color/main"
        android:textColorHint="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametxt" />

    <EditText
        android:id="@+id/number"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/text"
        android:ems="2"
        android:fontFamily="@font/chewy"
        android:hint="@string/enter_mobilenumber"
        android:inputType="number"

        android:textAlignment="center"
        android:textColor="@color/main"
        android:textColorHint="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/passtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt" />

    <EditText
        android:id="@+id/passtxt"
        style="@style/AppTheme"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/text"
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/entercode"
        android:inputType="numberPassword"
        android:textAlignment="center"

        android:textColor="@color/main"
        android:textColorHint="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/passtxt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="@font/chewy"
        android:text="@string/hello"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/nametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>